added output for search, re arranged constr, etc